typedef, unsigned index

--- a/CppStuff/CppStuff.vcxproj
+++ b/CppStuff/CppStuff.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="State.h" />
     <ClInclude Include="Statemachine.h" />
     <ClInclude Include="States.h" />
   </ItemGroup>
