--- a/CppStuff/CppStuff.vcxproj.filters
+++ b/CppStuff/CppStuff.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="States.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
